// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package stovia;

service Api {
  rpc GetFutureValue (FutureValueRequest) returns (FutureValueResponse) {}
}

message FutureValueRequest {
  string code = 1;
  string year = 2;
  string quarter = 3;
  int32 target_year = 4;
}

message FutureValueResponse {
  double future_value = 1;
  bool recommended_to_buy = 2;
}
